# Action

./: .env  .env.example  .gitignore  README.md  build.sh  dev.sh  docker-compose-development.yml  docker-compose.yml  pyproject.toml  requirements.txt  update.sh
.github/workflows/: build.yml
backend/: Dockerfile  README.md  railway.json  requirements.txt  run.sh
backend-api/: Dockerfile  mcp_config.json  requirements.txt
backend-api/app/: dependencies.py  main.py
backend-api/app/application/services/: __init__.py  agent.py  agent_service.py  auth.py  mcp_service.py
backend-api/app/core/: llm_provider.py
backend-api/app/domain/models/: __init__.py  agent.py  event.py  file.py  session.py
backend-api/app/domain/repositories/: agent_repository.py  mcp_repository.py  session_repository.py
backend-api/app/domain/services/: agent_domain_service.py
backend-api/app/domain/utils/: json_parser.py
backend/app/: dependencies.py  main.py
backend/app/core/: llm_factory.py
frontend/: Dockerfile  package-lock.json  package.json  railway.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Chat.vue  Login.vue
sandbox/: Dockerfile  README.md  railway.json  requirements.txt  supervisord.conf
sandbox-image/: Dockerfile  start.sh
sandbox-image/tool-api/: Dockerfile  requirements.txt
sandbox-image/tool-api/app/: main.py
sandbox-manager/: Dockerfile
sandbox-manager/app/: main.py
sandbox/app/: main.py
tests/: test_backend.py
(+28 files in other folders)
