[tool.poetry]
name = "intelligent-conversation-agent"
version = "0.1.0"
description = "A comprehensive intelligent conversation agent system with a FastAPI backend and Vue 3 frontend."
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
sse-starlette = "^1.6.5"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
